--- a/main.css
+++ b/main.css
@@ -21,19 +21,17 @@ h1{
 }
 #top-menubar{
     display: grid;
-
     grid-template-columns: repeat(auto-fit, minmax(142px,1fr));
     text-align: center;
 }
 #top-menubar .top-menu{
     display: grid;
-    border-right:2px solid #37C6D0;
+    border-right:1px solid #37C6D0;
+    border-left:0.5px solid #37C6D0;
     background-color: white;
     box-shadow: 1px 2px 15px white;
 }
-#top-menubar .top-menu:first-child{
-    border-left: 2px solid #37C6D0;
-}
+
 #top-menubar a:hover{
     background-color: rgba(0, 255, 0, 0.796);
     transition: all 0.3s ease-in-out;
@@ -57,14 +55,13 @@ h1{
     border-radius: 10px;
     text-align: center;
 }
-#side-bar a{
+.left-bar a{
     display: grid;
     text-decoration: none;
     color: black;
     position: relative;
-    top: 14px;
     width: 70px;
-    height: 30px;
+    height: 46.797px;
 }
 .left-bar{
     border-bottom: 2px solid #37C6D0;
@@ -72,7 +69,7 @@ h1{
 #side-bar .left-bar:last-child{
     border-bottom: none;
 }
-#side-bar a:hover{
+#side-bar .left-bar:hover{
     background-color: rgba(0, 255, 0, 0.796);
     transition: all 0.4s ease-in-out;
 }
@@ -83,14 +80,22 @@ h1{
     height: 600px;
     padding: 30px;
 }
-img{
+#main-content img{
     width: 100%;
-    padding-bottom: 20px;
+    padding: 20px;
+}
+img[src*=logo]{
+    width: 100%;
+    padding: 5px;
 }
 .main-title{
+    text-align: center;
     font-size: 20px;
     padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 2px solid rgb(0, 255, 0);
-    
+}
+#content-text{
+    padding: 20px;
+    font-size: 20px;
 }
