--- a/main.css
+++ b/main.css
@@ -90,12 +90,49 @@ img[src*=logo]{
 }
 .main-title{
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 2px solid rgb(0, 255, 0);
 }
-#content-text{
+.content-text{
     padding: 20px;
     font-size: 20px;
+    line-height: 30px;
 }
+#main-content .each-content{
+    float: left;
+    padding: 0;
+    margin: 10px;
+    overflow: hidden;
+    position: relative;
+}
+#main-content .each-content img{
+    margin:0;
+    padding:0;
+    float:left;
+    z-index:5;
+    width: 450px;
+    height: 300px;
+}
+#main-content .caption{
+    position: absolute;
+    top: 200px;
+    width: 450px;
+    height: 300px;
+    padding-top: 20px;
+    background: rgba(0, 0, 0, 0.276);
+    opacity: 0;
+    transition: all 0.6s ease-in-out;
+    z-index: 10;
+}
+#main-content .each-content:hover .caption{
+    opacity: 1;
+    transform: translateY(-200px);
+}
+#main-content .caption p{
+    font-size: 30px;
+    line-height: 50px;
+    color: white;
+}
+
