--- a/main.css
+++ b/main.css
@@ -44,9 +44,8 @@ h1{
     font-size: 20px;
 }
 #side-bar{
-    display: grid;
+    display: inline-grid;
     width: 70px;
-    height: 242px;
     margin-left: 30px;
     margin-top: 30px;
     position: fixed;
@@ -56,7 +55,7 @@ h1{
     text-align: center;
 }
 .left-bar a{
-    display: grid;
+    display: inline-grid;
     text-decoration: none;
     color: black;
     position: relative;
@@ -75,7 +74,6 @@ h1{
 }
 #main-content{
     display: inline-grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px));
     margin-left: 110px;
     height: 600px;
     padding: 30px;
@@ -106,21 +104,18 @@ img[src*=logo]{
     margin: 10px;
     overflow: hidden;
     position: relative;
-    grid-template-columns: repeat(auto-fit,minmax(300px));
+    grid-template-columns: repeat(auto-fit,minmax(100px));
 }
 #main-content .each-content img{
-    display: inline-grid;
-    grid-template-columns: repeat(auto-fit,minmax(300px));
+    display: grid;
     margin:0;
     padding:0;
-    float:left;
     z-index:5;
     width: 450px;
     height: 300px;
 }
 #main-content .caption{
-    display: inline-grid;
-    grid-template-columns: repeat(auto-fit,minmax(300px));
+    display: grid;
     position: absolute;
     top: 200px;
     width: 450px;
@@ -140,4 +135,37 @@ img[src*=logo]{
     line-height: 50px;
     color: white;
 }
-
+@media screen and (max-width: 425px) {
+    #main-content{
+        margin: 50px;
+        padding-left: 60px;
+    }
+    #main-content .caption{
+        display: grid;
+        position: absolute;
+        top: 200px;
+        width: 225px;
+        height: 150px;
+        padding-top: 20px;
+        background: rgba(0, 0, 0, 0.276);
+        opacity: 0;
+        transition: all 0.6s ease-in-out;
+        z-index: 10;
+    }
+    #main-content .caption p{
+        font-size: 15px;
+        line-height: 20px;
+        color: white;
+    }
+    #main-content .each-content img{
+        display: grid;
+        margin:0;
+        padding:0;
+        z-index:5;
+        width: 225px;
+        height: 150px;
+    }
+    #side-bar{
+        margin-left: 0px;
+    }
+}
