--- a/main.css
+++ b/main.css
@@ -13,7 +13,11 @@ body{
     width: 100%;
     margin: 0 auto;
 }
+#header{
+    display: grid;
+}
 h1{
+    display: grid;
     padding: 30px 0;
     text-align: center;
     color: rgba(0, 255, 0, 0.575);
@@ -31,7 +35,6 @@ h1{
     background-color: white;
     box-shadow: 1px 2px 15px white;
 }
-
 #top-menubar a:hover{
     background-color: rgba(0, 255, 0, 0.796);
     transition: all 0.3s ease-in-out;
@@ -54,6 +57,10 @@ h1{
     border-radius: 10px;
     text-align: center;
 }
+#side-bar img{
+    width: 70px;
+    height: 46.797px;
+}
 .left-bar a{
     display: inline-grid;
     text-decoration: none;
@@ -74,13 +81,13 @@ h1{
 }
 #main-content{
     display: inline-grid;
-    margin-left: 110px;
-    height: 600px;
+    margin-left: 130px;
+
     padding: 30px;
 }
 #main-content img{
     width: 100%;
-    padding: 20px;
+    padding: 10px;
 }
 img[src*=logo]{
     width: 100%;
@@ -114,6 +121,10 @@ img[src*=logo]{
     width: 450px;
     height: 300px;
 }
+#main-content .each-content:hover{
+    transition: all 0.4s ease-in-out;
+    transform: scale(1.1);
+}
 #main-content .caption{
     display: grid;
     position: absolute;
@@ -121,6 +132,7 @@ img[src*=logo]{
     width: 450px;
     height: 300px;
     padding-top: 20px;
+    padding: 20px;
     background: rgba(0, 0, 0, 0.276);
     opacity: 0;
     transition: all 0.6s ease-in-out;
@@ -137,7 +149,8 @@ img[src*=logo]{
 }
 @media screen and (max-width: 425px) {
     #main-content{
-        margin: 50px;
+        margin: 40px;
+        margin-right: 0px;
         padding-left: 60px;
     }
     #main-content .caption{
@@ -168,4 +181,15 @@ img[src*=logo]{
     #side-bar{
         margin-left: 0px;
     }
+}
+#down-container{
+    display: inline-grid;
+}
+footer{
+    border-top: 1px solid white;
+}
+#down-container li{
+    display: inline-grid;
+    color: white;
+    padding: 20px 90px;
 }
